user previous ride history and cab location
